# AI_Cover

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.example.yaml
rvccli/: audio_utils.py  cli.py  config.py  download_models.py  rvc_wrapper.py
rvccli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: env_check.py  setup.sh
