[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvccli"
version = "0.1.0"
description = "Retrieval-based Voice Conversion CLI wrapper for Mangio-RVC-Fork"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "numpy",
    "soundfile",
    "librosa",
    "pydub",
    "pyloudnorm",
    "webrtcvad",
    "tqdm",
    "pyyaml",
    "requests",
    "faiss-cpu"
]

[project.scripts]
rvccli = "rvccli.cli:app"
