[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvccli"
version = "0.1.0"
description = "Retrieval-based Voice Conversion CLI wrapper for Mangio-RVC-Fork"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "numpy",
    "soundfile",
    "librosa",
    "pydub",
    "pyloudnorm",
    "webrtcvad-wheels",
    "tqdm",
    "pyyaml",
    "requests",
    "faiss-cpu"
]

[tool.setuptools.packages.find]
include = ["rvccli*"]

[project.scripts]
rvccli = "rvccli.cli:app"
